<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
  <string name="applicationLabel">Phone</string>
  <string name="launcherDialpadActivityLabel">Phone Keypad</string>
  <string name="dialerIconLabel">Phone</string>
  <string name="callHistoryIconLabel">Call history</string>
  <string name="action_report_number">Report inaccurate number</string>
  <string name="action_copy_number_text">Copy number</string>
  <string name="copy_transcript_text">Copy transcription</string>
  <string name="action_block_number">Block number</string>
  <string name="action_unblock_number">Unblock number</string>
  <string name="call_details_delete">Delete</string>
  <string name="action_edit_number_before_call">Edit number before call</string>
  <string name="call_log_delete_all">Clear call history</string>
  <string name="call_log_trash_voicemail">Delete voicemail</string>
  <string name="snackbar_voicemail_deleted">Voicemail deleted</string>
  <string name="snackbar_voicemail_deleted_undo">UNDO</string>
  <string name="clearCallLogConfirmation_title">Clear call history?</string>
  <string name="clearCallLogConfirmation">This will delete all calls from your history</string>
  <string name="clearCallLogProgress_title">Clearing call history\u2026</string>
  <string name="userCallActivityLabel" product="default">Phone</string>
  <string name="notification_missedCallTitle">Missed call</string>
  <string name="notification_missedWorkCallTitle">Missed work call</string>
  <string name="notification_missedCallsTitle">Missed calls</string>
  <string name="notification_missedCallsMsg"><xliff:g id="num_missed_calls">%s</xliff:g> missed calls</string>
  <string name="notification_missedCall_call_back">Call back</string>
  <string name="notification_missedCall_message">Message</string>
  <string name="handle_restricted" translatable="false">RESTRICTED</string>
  <string name="post_call_notification_message"><xliff:g id="name">%1$s</xliff:g>: <xliff:g id="message">%2$s</xliff:g></string>
  <plurals name="notification_voicemail_title">
    <item quantity="one">Voicemail</item>
        <item quantity="other">
            <xliff:g id="count">%1$d</xliff:g>
            Voicemails
        </item>
  </plurals>
  <string name="notification_action_voicemail_play">Play</string>
    <string name="notification_voicemail_callers_list"><xliff:g id="newer_callers">%1$s</xliff:g>,
        <xliff:g id="older_caller">%2$s</xliff:g>
    </string>
    <string name="notification_new_voicemail_ticker">New voicemail from
        <xliff:g id="caller">%1$s</xliff:g>
    </string>
  <string name="voicemail_playback_error">Couldn\'t play voicemail</string>
  <string name="voicemail_fetching_content">Loading voicemail\u2026</string>
  <string name="voicemail_archiving_content">Archiving voicemail\u2026</string>
  <string name="voicemail_fetching_timout">Couldn\'t load voicemail</string>
  <string name="call_log_voicemail_header">Calls with voicemail only</string>
  <string name="call_log_incoming_header">Incoming calls only</string>
  <string name="call_log_outgoing_header">Outgoing calls only</string>
  <string name="call_log_missed_header">Missed calls only</string>
    <string name="call_log_item_count_and_date">(<xliff:g id="count">%1$d</xliff:g>)
        <xliff:g id="date">%2$s</xliff:g>
    </string>
  <string name="description_search_button">search</string>
  <string name="description_dial_button">dial</string>
  <string name="description_digits_edittext">number to dial</string>
  <string name="description_playback_start_stop">Play or stop playback</string>
  <string name="description_playback_speakerphone">Switch on or off speakerphone</string>
  <string name="description_playback_seek">Seek playback position</string>
  <string name="description_rate_decrease">Decrease playback rate</string>
  <string name="description_rate_increase">Increase playback rate</string>
  <string name="action_menu_call_history_description">Call history</string>
  <string msgid="2295659037509008453" name="action_menu_overflow_description">More options</string>
  <string name="action_menu_dialpad_button">key pad</string>
  <string name="menu_show_outgoing_only">Show outgoing only</string>
  <string name="menu_show_incoming_only">Show incoming only</string>
  <string name="menu_show_missed_only">Show missed only</string>
  <string name="menu_show_voicemails_only">Show voicemails only</string>
  <string name="menu_show_all_calls">Show all calls</string>
  <string name="add_2sec_pause">Add 2-sec pause</string>
  <string name="add_wait">Add wait</string>
  <string name="dialer_settings_label">Settings</string>
  <string name="menu_allContacts">All contacts</string>
  <string name="callDetailTitle">Call details</string>
  <string name="toast_call_detail_error">Details not available</string>
  <string name="dialer_useDtmfDialpad">Use touch tone keypad</string>
  <string name="dialer_returnToInCallScreen">Return to call in progress</string>
  <string name="dialer_addAnotherCall">Add call</string>
  <string name="type_incoming">Incoming call</string>
  <string name="type_incoming_pulled">Incoming call transferred to another device</string>
  <string name="type_outgoing">Outgoing call</string>
  <string name="type_outgoing_pulled">Outgoing call transferred to another device</string>
  <string name="type_missed">Missed call</string>
  <string name="type_incoming_video">Incoming video call</string>
  <string name="type_incoming_video_pulled">Incoming video call transferred to another device</string>
  <string name="type_outgoing_video">Outgoing video call</string>
  <string name="type_outgoing_video_pulled">Outgoing video call transferred to another device</string>
  <string name="type_missed_video">Missed video call</string>
  <string name="type_voicemail">Voicemail</string>
  <string name="type_rejected">Declined call</string>
  <string name="type_blocked">Blocked call</string>
  <string name="type_answered_elsewhere">Call answered on another device</string>
  <string name="actionIncomingCall">Incoming calls</string>
  <string name="description_call_log_play_button">Play voicemail</string>
  <string name="description_view_contact">View contact <xliff:g id="name">%1$s</xliff:g></string>
  <string name="description_call">Call <xliff:g id="name">%1$s</xliff:g></string>
  <string name="description_contact_details">Contact details for <xliff:g id="nameOrNumber">%1$s</xliff:g></string>
  <string name="description_spam_contact_details">Contact details for suspected spam caller <xliff:g id="nameOrNumber">%1$s</xliff:g></string>
  <string name="description_num_calls"><xliff:g id="numberOfCalls">%1$s</xliff:g> calls.</string>
  <string name="description_video_call">Video call.</string>
  <string name="description_send_text_message">Send SMS to <xliff:g id="name">%1$s</xliff:g></string>
  <string name="description_call_log_unheard_voicemail">Unheard voicemail</string>
  <string name="description_start_voice_search">Start voice search</string>
  <string name="menu_callNumber">Call <xliff:g id="number">%s</xliff:g></string>
  <string name="voicemail">Voicemail</string>
  <string name="callDetailsShortDurationFormat"><xliff:g example="28" id="seconds">%s</xliff:g> sec</string>
  <string name="callDetailsDurationFormat"><xliff:g example="42" id="minutes">%s</xliff:g> min <xliff:g example="28" id="seconds">%s</xliff:g> sec</string>
  <string name="voicemailCallLogToday">@string/call_log_header_today</string>
  <string name="voicemailCallLogDateTimeFormat"><xliff:g example="Jul 25, 2014" id="date">%1$s</xliff:g> at <xliff:g example="2:49 PM" id="time">%2$s</xliff:g></string>
  <string name="voicemailDurationFormat"><xliff:g example="10" id="minutes">%1$02d</xliff:g>:<xliff:g example="20" id="seconds">%2$02d</xliff:g></string>
  <string name="voicemailCallLogDateTimeFormatWithDuration"><xliff:g example="Jul 25, 2014 at 2:49PM" id="dateAndTime">%1$s</xliff:g> \u2022 <xliff:g example="01:22" id="duration">%2$s</xliff:g></string>
  <string msgid="4313552620858880999" name="dialog_phone_call_prohibited_message">Can\'t call this number</string>
  <string name="dialog_voicemail_not_ready_message">To set up voicemail, go to Menu &gt; Settings.</string>
  <string name="dialog_voicemail_airplane_mode_message">To call voicemail, first turn off Airplane mode.</string>
  <string name="contact_list_loading">Loading\u2026</string>
  <string name="imei">IMEI</string>
  <string name="meid">MEID</string>
  <string name="simContacts_emptyLoading">Loading from SIM card\u2026</string>
  <string name="simContacts_title">SIM card contacts</string>
  <string name="add_contact_not_available">No contacts app available</string>
  <string name="voice_search_not_available">Voice search not available</string>
  <string name="call_not_available">Cannot make a phone call because the Phone application has been disabled.</string>
  <string name="dialer_hint_find_contact">Search contacts</string>
  <string name="block_number_search_hint">Add number or search contacts</string>
  <string name="call_log_activity_title_font_family" translatable="false">sans-serif-light</string>
  <string name="view_full_call_history_font_family" translatable="false">sans-serif</string>
  <string name="call_log_all_empty">Your call history is empty</string>
  <string name="call_log_all_empty_action">Make a call</string>
  <string name="call_log_missed_empty">You have no missed calls.</string>
  <string name="call_log_voicemail_empty">Your voicemail inbox is empty.</string>
  <string name="show_favorites_only">Show favorites only</string>
  <string name="call_log_activity_title">Call History</string>
  <string name="call_log_all_title">All</string>
  <string name="call_log_missed_title">Missed</string>
  <string name="call_log_voicemail_title">Voicemail</string>
  <string name="tab_speed_dial">Speed dial</string>
  <string name="tab_history">Call History</string>
  <string name="tab_all_contacts">Contacts</string>
  <string name="tab_voicemail">Voicemail</string>
  <string name="favorite_hidden">Removed from favorites</string>
  <string name="favorite_hidden_undo">Undo</string>
    <string name="search_shortcut_call_number">Call
        <xliff:g id="number">%s</xliff:g>
    </string>
  <string name="search_shortcut_create_new_contact">Create new contact</string>
  <string name="search_shortcut_add_to_contact">Add to a contact</string>
  <string name="search_shortcut_send_sms_message">Send SMS</string>
  <string name="search_shortcut_make_video_call">Make video call</string>
  <string name="search_shortcut_block_number">Block number</string>
  <string name="num_missed_calls"><xliff:g id="number">%s</xliff:g> new missed calls</string>
  <string name="speed_dial_empty">No one is on your speed dial yet</string>
  <string name="speed_dial_empty_add_favorite_action">Add a favorite</string>
  <string name="all_contacts_empty">You don\'t have any contacts yet</string>
  <string name="all_contacts_empty_add_contact_action">Add a contact</string>
  <string name="contact_tooltip">Touch image to see all numbers or touch &amp; hold to reorder</string>
  <string name="remove_contact">Remove</string>
  <string name="call_log_action_video_call">Video call</string>
  <string name="call_log_action_send_message">Send a message</string>
  <string name="share_and_call">Share and call</string>
  <string name="call_log_action_details">Call details</string>
  <string name="call_log_action_share_voicemail">Send to &#8230;</string>
    <string name="call_log_action_call">
        Call <xliff:g example="John Smith" id="nameOrNumber">^1</xliff:g>
    </string>
  <string name="voicemail_play_start_pause">Start or pause playback.</string>
</resources>